# hello_stm32

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
