[package]
name = "hello_stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
#mls-rs = { version = "0.38.0", default-features = false }
#mls-rs-crypto-rustcrypto = { version = "0.9.0", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32f405oe", "time-driver-any"] }
embassy-time = { version = "0.3.0" }
embedded-alloc = "0.5.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3" }
